[gd_scene load_steps=4 format=3 uid="uid://bs1haonww68w6"]

[ext_resource type="Script" path="res://Scripts/TowerDefense/cannon_bullet_one.gd" id="1_gtg2e"]
[ext_resource type="Texture2D" uid="uid://cr7hkthcmxiq3" path="res://Sprites/TowerDefense/towerDefense_tilesheet.png" id="2_6h7pm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wiq02"]
radius = 8.0

[node name="CannonBulletOne" type="Node2D"]
script = ExtResource("1_gtg2e")

[node name="BulletSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_6h7pm")
region_enabled = true
region_rect = Rect2(1216, 704, 64, 64)

[node name="BulletArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletArea"]
shape = SubResource("CircleShape2D_wiq02")

[node name="LifetimeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="BulletArea" to="." method="_on_bullet_area_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
